Remove (task-copilot ...) from commit title (task-copilot 9b5ccc14)

--- a/frontend/src/i18n/locales/en/settings.json
+++ b/frontend/src/i18n/locales/en/settings.json
@@ -362,6 +362,10 @@
           "helper": "Comma-separated list of files to copy from the original project directory to the worktree. These files will be copied after the worktree is created but before the setup script runs. Useful for environment-specific files like .env, configuration files, and local settings. Make sure these are gitignored or they could get committed!"
         }
       },
+      "includeTaskId": {
+        "label": "Include task ID in commit messages",
+        "helper": "When enabled, commit messages will include \"(task-copilot <id>)\" suffix. When disabled, only the task title will be used."
+      },
       "save": {
         "button": "Save Project Settings",
         "success": "✓ Project settings saved successfully!",
